STAC-20785 Rename latencyMillis to durationNanos

--- a/spec/traces.api.yaml
+++ b/spec/traces.api.yaml
@@ -251,7 +251,7 @@ components:
         - ServiceName
         - SpanName
         - SpanKind
-        - Duration
+        - DurationNanos
         - StatusCode
         - TraceId
         - SpanId
