STAC-20743: spanFilter body required to please openapi generator

--- a/spec/traces.api.yaml
+++ b/spec/traces.api.yaml
@@ -204,6 +204,7 @@ components:
           schema: { $ref: "#/components/schemas/SpanQuery" }
     spanFilter:
       description: Filter for spans
+      required: true
       content:
         application/json:
           schema: { $ref: "#/components/schemas/SpanFilter" }
