--- a/spec/common.api.yaml
+++ b/spec/common.api.yaml
@@ -103,5 +103,20 @@ components:
         - _type
         - id
     Instant:
+      description: Date/time representation in milliseconds since epoch (1970-01-01 00:00:00)
       type: integer
       format: instant
+    InstantNanoPrecision:
+      type: object
+      description: A custom representation for a date/time that needs better than milliseconds precision. Simply using nanoseconds since epoch results in integers that are too big to be represented correctly in Javascript (which is limited to 2^53-1). Instead this uses the standard representation of milliseconds since epoch with a nanosecond offset. Calculate nanoseconds since epoch like this `nanosSinceEpoch = timestamp * 1000000 + offsetNanos`.
+      properties:
+        timestamp: 
+          description: Default timestamp representation in milliseconds since epoch
+          $ref: "#/components/schemas/Instant"
+        offsetNanos:
+          description: Offset in nanoseconds (relative to the timestamp). Especially useful when comparing start and/or end times of spans, for example when rendering a trace chart.
+          type: integer
+          format: int32
+      required:
+        - timestamp
+        - offsetNanos
